--- a/java_simple_gradle/build.gradle
+++ b/java_simple_gradle/build.gradle
@@ -10,5 +10,7 @@ dependencies {
     compile 'org.apache.zookeeper:zookeeper:3.4.10'
     compile 'org.projectlombok:lombok:1.18.24'
     compile 'commons-codec:commons-codec:1.11'
+    compile 'junit:junit:4.12'
+    compile 'org.mockito:mockito-all:1.10.19'
 }
 
